--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>Responsive Portfolio Template for Developers</title>
+    <title>M. Selcuk Albayrak</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive HTML5 Website Landing Page for Developers">
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
-    <link rel="shortcut icon" href="favicon.ico">  
+    <link rel="shortcut icon" href="pc.png">  
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
     <!-- Global CSS -->
@@ -63,7 +63,7 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
                             <p>
-                                I am a research assistant and a master's student in the Department of Computer Engineering, Bogazici University (Istanbul, Turkey), also working on robotics projects of CoLoRs (Cognition, Learning and Robotics Lab) group with Associate Professor Emre Ugur.
+                                I am a researcher and a master's student in the Department of Computer Engineering, Bogazici University (Istanbul, Turkey), also working on robotics projects of CoLoRs (Cognition, Learning and Robotics Lab) group with Associate Professor Emre Ugur.
                             </p>
                             <p>
                                 I received my undergraduate degrees in Computer Engineering and Business Administration from Koc University (Istanbul, Turkey), in 2017.
